--- a/css/cahnrs-core-css.css
+++ b/css/cahnrs-core-css.css
@@ -682,7 +682,7 @@ box-shadow:         inset 0px 1px 10px 0px rgba(0, 0, 0, 0.5);
 	background: none;
 	padding: 0;
 }
-#meter-container {
+.meter-container {
 	position: relative;
 }
 .meter-padding {
@@ -690,7 +690,7 @@ box-shadow:         inset 0px 1px 10px 0px rgba(0, 0, 0, 0.5);
 	min-height: 1em;
 	padding: 1em 2em;
 }
-#meter-container img {
+.meter-container img {
 	display: block;
 	height: auto;
 	width: 100%;
@@ -700,14 +700,14 @@ box-shadow:         inset 0px 1px 10px 0px rgba(0, 0, 0, 0.5);
 	position: absolute;
 	width: 100%;
 }
-#meter-bar {
+.meter-bar {
 	border-left: 0.5em solid #5e6a71;
 	height: 100%;
 	margin-left: 2em;
 	position: absolute;
 	top: 0;
 }
-#meter-bar p {
+.meter-bar p {
 	font-size: 1.2em;
 	font-weight: bold;
 	line-height: 1;
@@ -717,7 +717,7 @@ box-shadow:         inset 0px 1px 10px 0px rgba(0, 0, 0, 0.5);
 	background-color: #981E32;
 	z-index: -1;
 }
-#progress-amount-wrapper {
+.progress-amount-wrapper {
 	background: transparent url(../images/arrow.png) no-repeat top right;
 	top: 0;
 	color: #fff;
