--- a/css/cahnrs-core-admin-css.css
+++ b/css/cahnrs-core-admin-css.css
@@ -77,10 +77,9 @@ p.input-wrap  {
 	display: inline-block; width: 50%;
 }
 
-.cc-form-section .section-wrapper .url-inserted-item,
 .cc-form-section .section-wrapper .cc-inserted-items-wrap a {
 	display: block;
-	padding: 4px 15px;
+	padding: 4px 10px;
 	margin: 4px 10px;
 	background: #777;
 	color: #fff;
@@ -88,13 +87,9 @@ p.input-wrap  {
 	border: 1px solid #555;
 	text-decoration: none;
 	position: relative;
-	word-wrap: break-word;
 }
-.cc-form-section .section-wrapper .url-inserted-item span,
 .cc-form-section .section-wrapper .cc-inserted-items-wrap a span {
-	position: absolute;
-	right: 5px;
-	top: 3px;
+	float: right;
 }
 
 .cc-form-section .section-wrapper .cc-inserted-items-wrap a:hover span {
