--- a/css/cahnrs-core-css.css
+++ b/css/cahnrs-core-css.css
@@ -8,38 +8,46 @@
  */
 
 /* Crimson background */
-.pagebuilder-item.crimson {
+div.pagebuilder-item.crimson, 
+aside.pagebuilder-item.crimson {
 	background: rgba( 152, 30, 50, 0.85 );
 	color: #fff;
 }
-.pagebuilder-item.crimson a {
+div.pagebuilder-item.crimson a,
+aside.pagebuilder-item.crimson a {
 	color: #000;
 }
-.pagebuilder-item.crimson a:hover {
+div.pagebuilder-item.crimson a:hover,
+aside.pagebuilder-item.crimson a:hover {
 	color: #2a3033;
 }
 /* Gray background */
-.pagebuilder-item.gray {
+div.pagebuilder-item.gray,
+aside.pagebuilder-item.gray {
 	background: rgba( 94, 106, 113, 0.85 );
 	color: #fff;
 }
 /* Blue background */
-.pagebuilder-item.blue {
+div.pagebuilder-item.blue,
+aside.pagebuilder-item.blue {
 	background: rgba( 79, 134, 142, 0.85 );
 	color: #fff;
 }
 /* Green background */
-.pagebuilder-item.green {
+div.pagebuilder-item.green,
+aside.pagebuilder-item.green {
 	background: rgba( 143, 126, 53, 0.85 );
 	color: #fff;
 }
 /* Orange background */
-.pagebuilder-item.orange {
+div.pagebuilder-item.orange,
+aside.pagebuilder-item.orange {
 	background: rgba( 182, 114, 51, 0.85 );
 	color: #fff;
 }
 /* Yellow background */
-.pagebuilder-item.yellow {
+div.pagebuilder-item.yellow,
+aside.pagebuilder-item.yellow {
 	background: rgba( 198, 146, 20, 0.85 );
 	color: #fff;
 }
@@ -561,7 +569,8 @@
 	box-shadow:         inset 0px -3px 6px 0px rgba(50, 50, 50, 0.75);
 }
 
-.cahnrs-slideshow.slideshow-three .cahnrs-slide > a::before {
+.cahnrs-slideshow.slideshow-three .cahnrs-slide > a::before
+{
 	content: " ";
 	display: block;
 	position: absolute;
@@ -727,64 +736,6 @@ box-shadow:         inset 0px 1px 10px 0px rgba(0, 0, 0, 0.5);
 	position: absolute;
 }
 /**
- * Department Action Item
- * ----------------------------------------------------------------------------
- */
-.dept-action {
-	background-repeat: no-repeat;
-	background-size: cover;
-	margin: 0 0 2px 0;
-	min-height: 96px;
-}
-.dept-action h2 {
-	color: #fff;
-	cursor: pointer;
-	display: block;
-	font-size: 1.4rem;
-	font-weight: normal;
-	min-height: 3rem;
-	line-height: 1.6rem;
-	padding: 1.5rem 2rem;
-	text-transform: uppercase;
-}
-.dept-action .cc-title:hover {
-	color: #fff;
-}
-.dept-action .cc-content {
-	color: #fff;
-	display: none;
-	padding: 1.5rem 2rem;
-}
-.dept-action .cc-content a {
-	color: #464e54;
-}
-.dept-action:first-of-type .cc-title {
-	background: rgba( 198, 146, 20, 0.85 );
-}
-.dept-action:first-of-type .cc-title:hover,
-.dept-action:first-of-type.active .cc-title,
-.dept-action:first-of-type .cc-content {
-	background: rgba( 255, 184, 28, 0.9 );
-}
-.dept-action:nth-of-type(2) .cc-title {
-	background: rgba( 79, 134, 142, 0.85 );
-}
-.dept-action:nth-of-type(2) .cc-title:hover,
-.dept-action:nth-of-type(2).active .cc-title,
-.dept-action:nth-of-type(2) .cc-content {
-	background: rgba( 0, 165, 189, 0.9 );
-}
-.dept-action:nth-last-of-type(2) .cc-title {
-	background: rgba( 143, 126, 53, 0.85 );
-}
-.dept-action:nth-last-of-type(2) .cc-title:hover,
-.dept-action:nth-last-of-type(2).active .cc-title,
-.dept-action:nth-last-of-type(2) .cc-content {
-	background: rgba( 173, 164, 0, 0.9 );
-}
-
-
-/**
  * Media Queries
  * ----------------------------------------------------------------------------
  */
@@ -872,25 +823,34 @@ box-shadow:         inset 0px 1px 10px 0px rgba(0, 0, 0, 0.5);
 @media only screen and (max-width: 693px) {
 
 	/* Basic item styles */
-	.pagebuilder-item {
+	div.pagebuilder-item,
+	aside.pagebuilder-item {
 		background: #fff;
 	}
-	.pagebuilder-item.crimson {
+	div.pagebuilder-item.crimson,
+	aside.pagebuilder-item.crimson {
 		background: #981e32;
 	}
-	.pagebuilder-item.gray {
+	div.pagebuilder-item.gray,
+	aside.pagebuilder-item.gray {
 		background: #5e6a71;
 	}
-	.pagebuilder-item.blue {
+	div.pagebuilder-item.blue,
+	aside.pagebuilder-item.blue {
 		background: #4f868e;
 	}
-	.pagebuilder-item.green {
+	div.pagebuilder-item.green,
+	aside.pagebuilder-item.green {
 		background: #8f7e35;
 	}
-	.pagebuilder-item.orange {
+	/* Orange background */
+	div.pagebuilder-item.orange,
+	aside.pagebuilder-item.orange {
 		background: #b67233;
 	}
-	.pagebuilder-item.yellow {
+	/* Yellow background */
+	div.pagebuilder-item.yellow,
+	aside.pagebuilder-item.yellow {
 		background: #c69214;
 	}
 
